kubernetes/oauth2/oauth2-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: oauth2-proxy
  name: oauth2-proxy
  namespace: cp-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
        - args:
            - --provider=oidc
            - --redirect-url=https://oauth2.internal.dev.cloud.jumbo.com/oauth2/callback
            - --oidc-issuer-url=https://dev-22399512.okta.com/oauth2/default
            - --cookie-secret=thisIsARandomCookieSecre
            - --email-domain=*
            - --upstream=file:///dev/null
            - --http-address=0.0.0.0:4180
            - --skip-provider-button=true
            - --cookie-secure=false
            - --pass-access-token=true
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.1.3
          imagePullPolicy: Always
          name: oauth2-proxy
          ports:
            - containerPort: 4180
              protocol: TCP
