kubernetes/oauth2/app-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: dojodocker
  namespace: cp-test
spec:
  selector:
    app: dojodocker
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  type: ClusterIP
