kubernetes/oauth2/oauth2-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: cp-test
spec:
  selector:
    app: oauth2-proxy
  ports:
    - port: 4180
      protocol: TCP
      targetPort: 4180
  type: ClusterIP
