kubernetes/oauth2/app-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://oauth2.internal.dev.cloud.jumbo.com/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://oauth2.internal.dev.cloud.jumbo.com/oauth2/start"
    nginx.ingress.kubernetes.io/auth-response-headers: "X-Auth-Request-User,X-Auth-Request-Email"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
    kubernetes.io/ingress.class: internal-traffic
  name: app-ing
  namespace: cp-test
spec:
  rules:
    - host: dojodocker.internal.dev.cloud.jumbo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dojodocker
                port:
                  number: 80
  tls:
    - hosts:
        - dojodocker.internal.dev.cloud.jumbo.com
      secretName: dojodocker-tls.dev.cloud.jumbo.com
