kubernetes/oauth2/oauth2-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy
  namespace: cp-test
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "8k"
    kubernetes.io/ingress.class: internal-traffic
spec:
  rules:
    - host: oauth2.internal.dev.cloud.jumbo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 4180
  tls:
    - hosts:
        - oauth2.internal.dev.cloud.jumbo.com
      secretName: oauth2-proxy-tls.dev.cloud.jumbo.com
